--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
+    "serve": "^14.2.0",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.2.7",
     "tailwindcss-scoped-groups": "^2.0.0",
@@ -39,10 +40,9 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
-  "devDependencies": {
-  },
   "scripts": {
     "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
